--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,20 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+.finished {
+            color: gray;
+            text-decoration: line-through;
+        }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+        :not(.finished) .complete {
+            display: none;
+        }
+
+        .finished .complete {
+            display: block;
+        }
+
+        .finished .btn-success, .finished .in-progress {
+            display: none;
+        }
+
+        .finished .btn-warning {
+            display: block;
+        }
